@@ -19,13 +19,13 @@ linkend="class-gtkbin">gtk.Bin</link></classname></ooclass>
       <constructorsynopsis language="python">
 	<methodname><link linkend="constructor-gtkalignment">gtk.Alignment</link></methodname>
 	<methodparam><parameter
-		       role="keyword">xalign</parameter><initializer>0.5</initializer></methodparam>
+		       role="keyword">xalign</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">yalign</parameter><initializer>0.5</initializer></methodparam>
+		       role="keyword">yalign</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">xscale</parameter><initializer>1.0</initializer></methodparam>
+		       role="keyword">xscale</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">yscale</parameter><initializer>1.0</initializer></methodparam>
+		       role="keyword">yscale</parameter><initializer>0.0</initializer></methodparam>
       </constructorsynopsis>
       <methodsynopsis language="python">
 	<methodname><link
@@ -199,13 +199,13 @@ pixels below.</para>
     <programlisting><constructorsynopsis language="python">
 	<methodname>gtk.Alignment</methodname>
 	<methodparam><parameter
-		       role="keyword">xalign</parameter><initializer>0.5</initializer></methodparam>
+		       role="keyword">xalign</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">yalign</parameter><initializer>0.5</initializer></methodparam>
+		       role="keyword">yalign</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">xscale</parameter><initializer>1.0</initializer></methodparam>
+		       role="keyword">xscale</parameter><initializer>0.0</initializer></methodparam>
 	<methodparam><parameter
-		       role="keyword">yscale</parameter><initializer>1.0</initializer></methodparam>
+		       role="keyword">yscale</parameter><initializer>0.0</initializer></methodparam>
       </constructorsynopsis></programlisting>
     <variablelist>
       <varlistentry>
@@ -240,12 +240,7 @@ pixels below.</para>
 
     <para>Creates a new alignment widget with the specified properties. If
 the scale and alignment parameters are not specified they default to
-1.0 and 0.5 respectively..</para>
-
-    <note>
-      <para>In PyGTK 2.2 and earlier the default values for scale and
-alignment were 0.0.</para>
-    </note>
+0.0.</para>
 
   </refsect1>
 
