@@ -1,6 +1,11 @@
+2004-10-21  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkalignment.xml (gtk.Alignment) Undo changes since new
+	default values are wrong.
+
 2004-10-19  John Finlay  <finlay@moeraki.com>
 
-	* pygtk-gtkalignment.xml (gtk.Alignment) Note change of efault values
+	* pygtk-gtkalignment.xml (gtk.Alignment) Note change of default values
 	in 2.4. (Gustavo Niemeyer)
 
 2004-10-12  John Finlay  <finlay@moeraki.com>
